# my_get_next_line

./: a.out  large_file.txt  main.c  main2.c  test.txt
get_next_line_re/: 1.txt  CMakeLists.txt  Cahier des charges  a.out  get_next_line.c  get_next_line.h  get_next_line_re.exe.stackdump  l  main.c  test3.txt  test4.txt  test4.txt___jb_tmp___  testetst  ttt
get_next_line_re/libft/: Makefile  ft_atoi_base.c  ft_bzero.c  ft_convert_base.c  ft_isalnum.c  ft_isalpha.c  ft_isprint.c  ft_itoa_base.c  ft_list_last.c  ft_list_push_back.c  ft_list_size.c  ft_lstadd.c  ft_lstdel.c  ft_lstiter.c  ft_memccpy.c  ft_memcmp.c  ft_memdel.c  ft_putchar.c  ft_putendl_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_striter.c  ft_strmap.c  ft_strmapi.c  ft_strncmp.c  ft_strnequ.c  ft_strnstr.c  ft_strsplit.c  ft_strsplit_charset.c  ft_strstr.c  ft_strsub.c  ft_strtrim.c  libft.h
libft/: CMakeLists.txt  ft_isdigit.c  ft_list_foreach.c  ft_lstdelone.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memchr.c  ft_memcpy.c  ft_putendl.c  ft_putnbr.c  ft_str_to_lower.c  ft_str_to_upper.c  ft_strchr.c  ft_strequ.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strncat.c  ft_strncpy.c  ft_strnew.c  ft_strrchr.c
sandbox/: large_file.txt
